--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
     background-color: black;
 }
 
+.card-img-overlay {
+    top: -1!important;
+
+}
+
 @media screen and (max-width: 600px) {
     .img-border {
         border: 1px solid navy;
