removed padding top

--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ p {
   }
  
   .flip .card .back {
-    padding-top: 50%;
+    /*padding-top: 50%;*/
     -webkit-transform: rotatey(-180deg);
     transform: rotatey(-180deg);
   }
