--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ body {
     background-color: black;
 }
 
+p {
+    font-family: 'Epilogue', sans-serif;
+}
+
 @media screen and (max-width: 600px) {
     .img-border {
         border: 1px solid navy;
@@ -76,6 +80,7 @@ h1.main-heading {
 .jumbotron .lead {
     font-style: italic;
     color: black;
+    font-family: 'Epilogue', sans-serif;
 }
 
 span .inline-btn {
@@ -106,10 +111,11 @@ p {
 
 /*About Me styling*/
  .p-about {
-     color: white;
+     color: black;
      text-align: center;
      font-size: 20px;
      padding: 10px 20px;
+     font-family: 'Epilogue', sans-serif;
  }
 
 /*Projects styling*/
@@ -149,6 +155,9 @@ p {
     transform: rotatey(-180deg);
   }
 
+.form-text {
+    font-family: 'Epilogue', sans-serif;
+}
 
 /*Contact form*/
 label {
@@ -223,4 +232,14 @@ footer {
 
 .p-footer {
     font-size: 20px;
+    font-family: 'Epilogue', sans-serif;
+}
+
+.p-footer-links, a {
+    text-decoration: none;
+    font-size: 25px;
+    padding: 5px;
+    color: gold;
+    font-family: 'Epilogue', sans-serif;
+
 }
