--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
+:root {
+    --text-color: rgba(62 62 62 / 100%);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body > footer{
 	margin:0px;
 	padding:0px;
@@ -16,287 +26,213 @@ body {
 
 h1,h2,h3,h4,h5,h6 {
     font-family: 'Big Shoulders Stencil Display', sans-serif;
+    text-transform: uppercase;
+    color: var(--text-color);
 }
 
 p {
     font-family: 'Epilogue', sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #fff;
+}
+
+a:hover, i:hover {
+    color: #a1a1a1;
+}
+
+.btn-primary:hover {
+    /* background-color: #0b5ed7; */
+    /* border-color: #0a58ca; */
+    /* border: 2px solid #0a58ca; */
+    /* transition: border 1s; */
+    transform: scale(1.1);
+    transition: transform 0.2s;
+}
+
+.btn:focus {
+    box-shadow: 0 0 0 0;
+    opacity: 0.8;
+}
+
+.btn {
+    background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
+    font-family: 'Big Shoulders Stencil Display', sans-serif;
+    color: #fff;
+    border: 1px solid transparent;
+    border-radius: 15px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
+a.btn {
+    text-decoration: none;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .navbar {
     background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
 }
 
-/* a.nav-link {
+
+
+.hero-title {
     text-transform: uppercase;
-} */
+    font-size: 6rem;
+}
 
-/* @media (min-width: 830px) and (max-width: 1000px) {
-    .font-scale {
-        font-size: 1.5vmin!important;
+.line::before {    
+    content: '';
+    width: 170px;
+    height: 15px;
+    background-color: rgba(0 12 128 / 50%);
+    display: block;
+    position: relative;
+    top: 100px;
+    left: 236px;
+}
+
+@media screen and (max-width: 472px) {
+    .hero-title {
+        font-size: 4.5rem;
     }
 
-    div.card.bg-dark.text-white.text-center {
-        width: 50vw!important;
+    .line::before {
+        display: none;
     }
+}
 
+.hero-subtitle {
+    font-size: 32px;
+}
+
+.hero-text {
+    font-size: 20px;
 }
 
 
-@media (min-width: 601px) and (max-width: 829px) {
-    
-    .font-scale {
-        font-size: 1vmin!important;
-    }
 
-    div.card.bg-dark.text-white.text-center {
-        width: 40vw!important;
-    }
 
+.project-title {
+    font-size: 5rem;
 }
 
-@media (max-width: 600px) and (min-width: 388px) {
-    .img-border {
-        border: 1px solid navy;
-        border-radius: 50%;
-        height: 10vh!important;
-        width: 14vw!important;
-    }
-    .font-scale {
-        font-size: 1vmin!important;
-    }
-
-    div.card.bg-dark.text-white.text-center {
-        width: 40vw!important;
-    }
-
+.project-title::before {    
+    content: '';
+    width: 170px;
+    height: 15px;
+    background-color: rgba(0 12 128 / 50%);
+    display: block;
+    position: relative;
+    top: 85px;
+    left: 45px;
 }
 
-@media (max-width: 585px) {
-    .font-scale {
-        font-size: 2vmin!important;
-    }
-
-    .card-title {
-        font-size: 2vmin!important;
-    }
-
-    div.card.bg-dark.text-white.text-center {
-        width: 80vw!important;
-    }
-
-}
-
-h1.main-heading {
-    font-family: 'Big Shoulders Stencil Display', cursive;
-    color: gold;
-    text-align: center;
-    font-size: 60px;
-    padding-top: 20px;
-}
-
-.nav-link, .navbar-brand, .navbar-text {
-    font-family: 'Big Shoulders Stencil Display', cursive;
-    font-size: 22px;
-    color: gold!important;
-}
-
-.circle {
-    height: 100px;
-    width: 100px;
-    padding: 10px;
-    background-color: navy;
-    border-radius: 50%;
-}
-
-
-.jumbotron {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    text-align: center;
-    color: gold;
-
-
-}
-
-.img-border {
-    border: 1px solid navy;
-    border-radius: 50%;
-    height: 16vh;
-    width: 8vw;
-}
-
-.mooning-bg {
-    background-color: rgba(0, 0, 128, 1);
-    background: url("../img/mooning.png");
-}
-
-.jumbotron .display-4 {
-    font-family: 'Big Shoulders Stencil Display', cursive;
-}
-
-.jumbotron .lead {
-    font-style: italic;
-    color: black;
-    font-family: 'Epilogue', sans-serif;
-}
-
-span .inline-btn {
-    display: inline-block;
-}
-
-hr {
-    color: khaki;
-    background-color: khaki;
-}
-
-h1{
-    text-shadow: 2px 2px black;
-}
-
-.btn-primary {
-    background-color: navy;
-}
-
-p {
- font-family: 'Roboto', sans-serif;
-}
-
-.img-size {
+#projects::after {
+    content: "";
+    display: block;
     width: 100%;
-    height: 75%;
+    height: 600px;
+    background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
+    position: relative;
+    margin-top: -50vh;
+    z-index: -1;
+
 }
 
+@media screen and (max-width: 992px) {
+    #projects::after {
+        content: "";
+        display: block;
+        width: 100%;
+        height: 600px;
+        background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
+        position: relative;
+        margin-top: -100vh;
+        z-index: -1;
+    }
 
- .p-about {
-     color: black;
-     text-align: center;
-     font-size: 20px;
-     padding: 10px 20px;
-     font-family: 'Epilogue', sans-serif;
- }
-
-
-
- .flip {
-    -webkit-perspective: 800;   
-            perspective: 800;
-          position: relative;
-          text-align: center;
-  }
-  .flip .card.flipped {
-    -webkit-transform: rotatey(-180deg);
-            transform: rotatey(-180deg);
-  }
-  .flip .card {
-
-      -webkit-transform-style: preserve-3d;
-      -webkit-transition: 0.5s;
-      transform-style: preserve-3d;
-      transition: 0.5s;
-      background-color: darkblue;
-     
-  }
-  .flip .card .face {
-    -webkit-backface-visibility: hidden ;
-      backface-visibility: hidden ;
-     z-index: 2;
-  }
-  .flip .card .front {
-     position: relative;
-     z-index: 1;
-  }
- 
-  .flip .card .back {
-    padding-top: 5%;
-    -webkit-transform: rotatey(-180deg);
-    transform: rotatey(-180deg);
-  }
-
-
-
-.form-text {
-    font-family: 'Epilogue', sans-serif;
+    #contact {
+        position: relative;
+        margin-top: 35vh!important;
+    }
 }
 
-
-label {
-    color: gold;
-    text-shadow: 2px 2px black;
-    font-family: 'Roboto', sans-serif;
+.card {
+    border-radius: 15px;
+    width: 25rem;
+    height: 100%;
+    background: linear-gradient(0deg, rgb(100, 102, 127) 0%, rgb(65, 72, 138) 100%);
+    color: #fff;
 }
-.btn-spacing {
+
+.card-title {
+    font-size: 2rem;
+    color: #fff;
     margin-bottom: 10px;
 }
 
-footer {
-    color: gold;
-    font-weight: 600;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
+.card-img-top {
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.card-body ul li {
+    display: inline-flex;    
+    border-radius: 15px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    padding: 0 10px;
+    min-width: 81px;
+    justify-content: center;
+}
+
+.card-body ul li:nth-child(2) {
+    margin: 0 10px;
+}
+
+.card-body ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
+
+
+.contact-title {
+    font-size: 5rem;
+}
+
+.contact-title::before {    
+    content: '';
+    width: 150px;
+    height: 15px;
+    background-color: rgba(0 12 128 / 50%);
+    display: block;
     position: relative;
-    width: 100%;
-    overflow: hidden;
+    top: 85px;
+    left: 38px;
 }
 
+.form-label {
+    font-family: 'Epilogue', sans-serif;
+}
 
-.box {
+footer {
+    background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
+    padding: 20px;
+    color: #fff;
+}
+
+.footer-links {
     display: inline-flex;
-    flex-wrap: wrap;
-    row-gap: 10px;
-    justify-content: space-between;
-}
-
-.box-One {
-    flex: 1;
-    margin-bottom: 20px;
-}
-
-.box-Two {
-    flex: 1;
-}
-
-.box-Three {
-    flex: 1;
-}
-
-.box-Four {
-    align-self: flex-end;
-    padding-right: 10px;
-}
-
-
-.fab {
-    padding: 5px;
-    font-size: 50px;
-    text-align: center;
     text-decoration: none;
-    margin: 5px 2px;
-    border-radius: 10px;
-}
-.fa-linkedin {
-    color: gold;
+    list-style-type: none;
+    margin: 0 auto;
 }
 
-.fab:hover {
-    opacity: 0.5;
+.footer-links li:nth-child(2) {
+    margin: 0 20px;
 }
-
-.fa-github-square {
-    color: gold;
-}
-
-
-.p-footer {
-    font-size: 20px;
-    font-family: 'Epilogue', sans-serif;
-}
-
-.p-footer-links, a {
-    text-decoration: none;
-    font-size: 25px;
-    padding: 5px;
-    color: gold;
-    font-family: 'Epilogue', sans-serif;
-
-} */
