--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ a.btn {
 .hero-title {
     text-transform: uppercase;
     font-size: 6rem;
+    line-height: 0.9;
 }
 
 .line::before {    
@@ -92,7 +93,7 @@ a.btn {
     background-color: rgba(0 12 128 / 50%);
     display: block;
     position: relative;
-    top: 100px;
+    top: 85px;
     left: 236px;
 }
 
