Update style.css footer full width

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ body > footer{
 	min-width:100%;
 	max-width:100%;
 	height:auto;
+	width: 100vw !important;
+        left: 12px;
+        position: absolute;
 }
 
 html {
