--- a/css/style.css
+++ b/css/style.css
@@ -139,40 +139,28 @@ a.btn {
     left: 45px;
 }
 
-/*#projects::after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 600px;
-    background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
-    position: relative;
-    margin-top: -50vh;
-    z-index: -1;
 
-}*/
 
 #projects {
-  background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
+ /* background: linear-gradient(0deg, #000C80 0%, #00021A 100%);*/
   padding-bottom: 60px;
+	position: relative;
+	overflow: hidden;
 }
 
-/*@media screen and (max-width: 992px) {
-    #projects::after {
-        content: "";
-        display: block;
-        width: 100%;
-        height: 600px;
-        background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
-        position: relative;
-        margin-top: -100vh;
-        z-index: -1;
-    }
+#projects::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
+    transform: skewY(-5deg);
+    transform-origin: top left;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+}
 
-    #contact {
-        position: relative;
-        margin-top: 35vh!important;
-    }
-}*/
 
 .card {
     border-radius: 15px;
