--- a/css/style.css
+++ b/css/style.css
@@ -143,13 +143,13 @@ a.btn {
 
 
 #projects {
- /* background: linear-gradient(0deg, #000C80 0%, #00021A 100%);*/
+ background: linear-gradient(0deg, #000C80 0%, #00021A 100%);
   padding-bottom: 60px;
 	position: relative;
 	overflow: hidden!important;
 }
 
-#projects::before {
+/* #projects::before {
     content: "";
     position: absolute;
     top: 0;
@@ -160,7 +160,7 @@ a.btn {
     z-index: -1;
     width: 100%;
     height: 100%;
-}
+} */
 
 
 .card {
